--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,13 @@
 .App {
+  max-width: 600px;
+  width: 90%;
+  min-width: 320px;
+  margin: 0 auto;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.App__main {
+  flex-grow: 1;
 }
